--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@ body {
 }
 
 .search {
-    position: relative;
-    height: 80px;
-    
+    position: relative;        
 }
 
 .search .input {
@@ -26,8 +24,8 @@ body {
     border: 0;
     font-size: 25px;
     padding: 20px;
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
     transition: width 0.3s ease;
 }
 
@@ -35,12 +33,11 @@ body {
     background-color: #dcdcdc;
     border: 0;
     cursor: pointer;
-    font-size: 35px;
-    position: absolute;
+    font-size: 25px;
     top: 0;
     left: 0;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     transition: transform 0.3s ease;
 }
 
@@ -50,11 +47,11 @@ body {
 }
 
 .search.active .input {
-    width: 150px;
+    width: 200px;
 }
 
 .search.active .btn {
-    transform: translateX(200px);
+    transform: translateX(px);
 }
 
 
